# wolfed

./: README.md
agi-memory/: AGENTS.md  Dockerfile  Dockerfile.worker  README.md  agi  agi_cli.py  agi_init.py  agi_mcp_server.py  architecture.md  cognitive_memory_api.py  conversation.py  db-manage.sh  docker-compose.yml  docker-compose.yml.bak  ingest.py  memory_tools.py  prompt_resources.py  pyproject.toml  pytest.ini  schema.sql  test.py  test_plan.md  wait-for-db.sh  worker.py
agi-memory/migrations/: 000_patch_personhood.sql  001_patch_affect.sql
agi-memory/prompts/: personhood.md
agi-memory/reference/: age-website.git_md.txt  quirks.md
